WP-1547: MegaMenu: Hover over menu items broken in IE10; WP-1520 -- FIXED.

--- a/css/megamenu_styles.css
+++ b/css/megamenu_styles.css
@@ -6,7 +6,7 @@
 }
 
 .qtip-wrapper {
- width:1170px;
+ width:1170px !important;
  margin:auto;
 }
 
